# gamejam2019

./: CMakeLists.txt  README.md  gj
code/: Animal.cpp  Animal.hpp  Audio.cpp  Audio.hpp  Bullet.cpp  Bullet.hpp  Enums.hpp  GameManager.cpp  GameManager.hpp  Kabum.cpp  Kabum.h  MainGame.cpp  MainGame.hpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  Terrain.cpp  Terrain.hpp  WinScreen.cpp  WinScreen.hpp  main.cpp
code/base/: Actor.hpp  All.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  AutoDraw.hpp  Base.cpp  Base.hpp  ResourceBank.hpp  Scene.hpp
data/: animacjamotyl1.s1a  animacjamotyl2.s1a  animacjapocisk1.s1a  animacjapocisk2.s1a  animacjaryba1.s1a  animacjaryba2.s1a  animacjazolw1.s1a  animacjazolw2.s1a  animacjazwyciestwo1.s1a  animacjazwyciestwo2.s1a  gracz1.s1a  gracz1chod.s1a  gracz2.s1a  gracz2chod.s1a  maleboom.s1a  skok1.s1a  skok2.s1a  upadek1.s1a  upadek2.s1a
